changing path img

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </button>
                 </div>
                 <div class="w-full h-full lg:h-96 lg:bg-sanFranciscoDesktop  lg:bg-cover lg:bg-center ">
-                    <img class="lg:hidden" src="../public/img/sanFrancisco.jpg"/>
+                    <img class="lg:hidden" src="./public/img/sanFrancisco.jpg"/>
                 </div>
             </div>
         </div>
